misc updates and add gpfs_fcntl.h stubs

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,6 @@
 ACLOCAL_AMFLAGS="-Im4"
 lib_LTLIBRARIES = libgpfs.la
-libgpfs_la_SOURCES = src/libgpfs.c \
-		    include/gpfs.h
+libgpfs_la_SOURCES = src/libgpfs.c
 
-include_HEADERS = include/gpfs.h
+include_HEADERS = include/gpfs.h include/gpfs_fcntl.h
 libgpfs_la_CPPFLAGS = -I${srcdir}/include
